// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRouterLink should render correctly with a "className" attribute 1`] = `
<a
  aria-current={null}
  className="bpk-router-link my-custom-class-1 my-custom-class-2"
  href="/home"
  onClick={[Function]}
  style={undefined}
>
  Link
</a>
`;

exports[`BpkRouterLink should render correctly with a "to" attribute 1`] = `
<a
  aria-current={null}
  className="bpk-router-link"
  href="/home"
  onClick={[Function]}
  style={undefined}
>
  Link
</a>
`;

exports[`BpkRouterLink should render correctly with arbitrary attributes 1`] = `
<a
  aria-current={null}
  className="bpk-router-link"
  href="/home"
  onClick={[Function]}
  style={undefined}
  target="_blank"
>
  Link
</a>
`;
